--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,9 @@ jobs:
         env:
           NODE_ENV: production
 
+      - name: Copy .nojekyll to dist
+        run: cp .nojekyll dist/ || echo "" > dist/.nojekyll
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
